<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">柱柱优卡</string>

    <!-- xlistView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xilstview_refreshed">刚刚</string>

    <!-- 录音相关-->
    <string name="press_talk">按住说话</string>
    <string name="time_short">时间太短</string>
    <string name="cancel">取消</string>
    <string name="accept">接受</string>
    <string name="hint">添加备注</string>

    <!-- 二维码相关 -->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="title_activity_actual_delivery">ActualDeliveryActivity</string>

    <!-- kc -->
    <string name="un_deal_order">比价、抢单中</string>
    <string name="un_deal_waybill">我的运单</string>
    <string name="source_of_goods">柱柱货源</string>
    <string name="my_cars">我的司机</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_oil_card">我的油卡</string>
    <string name="to">&#160;至&#160;</string>
    <string name="grab">抢</string>
    <string name="compare">比</string>
    <string name="order_item_create_time">发布时间&#160;&#160;&#160;&#160;%1$s</string>
    <string name="order_item_description">货物摘要&#160;&#160;&#160;&#160;%1$s&#160;&#160;%2$s&#160;&#160;%3$s</string>
    <string name="prince_unit">元</string>
    <string name="prince_unit2">(元)</string>
    <string name="distance_unit">公里</string>
    <string name="need_cars">要求车辆</string>
    <string name="total">合计</string>
    <string name="remark">注意事项</string>
    <string name="sender_company">发标方</string>
    <string name="initiator_name">联系人</string>
    <string name="initiator_phone">联系电话</string>
    <string name="pickup_time">提货时间</string>
    <string name="pickup_address">提货地址</string>
    <string name="delivery_time">交货时间</string>
    <string name="delivery_address">交货地址</string>
    <string name="order_detail_freight">运费：</string>
    <string name="grab_order">抢单</string>
    <string name="pay_way">支付方式</string>
    <string name="payment_top_rate">首付</string>
    <string name="payment_last_rate">尾款</string>
    <string name="receipt">回单</string>
    <string name="cash">现金</string>
    <string name="oil_card">油卡</string>
    <string name="cash_pay">现金支付</string>
    <string name="oil_card_pay">油卡支付</string>
    <string name="offer">出价</string>
    <string name="input_total_prince">输入总价格</string>
    <string name="compare_rest_time">比价剩余时间</string>
    <string name="rest_time">剩余时间</string>
    <string name="highest_grab_price">出价不能高于</string>
    <string name="grab_details">抢单详情</string>
    <string name="bidding_details">比价详情</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="provenance">请输入始发地</string>
    <string name="destination">请输入目的地</string>
    <string name="all">全部</string>
    <string name="bidding">竞价</string>
    <string name="goods_list">货源列表</string>
    <string name="find_good_by_map">地图找货</string>
    <string name="add_driver">添加司机</string>
    <string name="add">添加</string>
    <string name="adding">添加中...</string>
    <string name="truck_number">车牌</string>
    <string name="truck_type">车型</string>
    <string name="driver">司机</string>
    <string name="driver_number">司机手机</string>
    <string name="status">状态</string>
    <string name="now_location">当前位置</string>
    <string name="id_card_photo">身份证照片</string>
    <string name="bank_card_photo">银行卡照片</string>
    <string name="driver_card_photo">驾驶证照片</string>
    <string name="travel_card_photo">行驶证照片</string>
    <string name="loading_car_photo">装车单照片</string>
    <string name="driver_photo">司机照片</string>
    <string name="car_photo">车辆照片</string>
    <string name="car_number_photo">车牌照片</string>
    <string name="car_detail">车辆详情</string>
    <string name="driver_detail">司机详情</string>
    <string name="editor_car_info">编辑车辆</string>
    <string name="no_location_info">无位置信息</string>
    <string name="un_transport">未运输</string>
    <string name="transporting">运输中</string>
    <string name="account_balance">账户余额（元）</string>
    <string name="bank_card">银行卡</string>
    <string name="top_up">充值</string>
    <string name="withdraw">提现</string>
    <string name="cash_deposit">保证金</string>
    <string name="bill">账单</string>
    <string name="payed">已缴纳</string>
    <string name="un_pay">未缴纳保证金</string>
    <string name="extract_cash_deposit">提取保证金￥%1$s</string>
    <string name="payment_cash_deposit">存入保证金￥%1$s</string>
    <string name="open_offer_permissions">开启报价权限</string>
    <string name="close_offer_permissions">取消报价权限</string>
    <string name="please_paid">请充值</string>
    <string name="etc_card">ETC卡</string>
    <string name="un_assigned">待处理</string>
    <string name="in_progress">进行中</string>
    <string name="completed">已完成</string>
    <string name="grab_success">抢标成功</string>
    <string name="un_distribution_car">待分配车辆</string>
    <string name="distribution_car">分配车辆</string>
    <string name="is_over">已结束</string>
    <string name="grabbing">抢单中。。。</string>
    <string name="comparing">比价中...</string>
    <string name="compared">比价中标</string>
    <string name="un_compared">比价未中标</string>
    <string name="input_car_number">请输入车牌</string>
    <string name="input_driver_phone">请输入司机手机号码</string>
    <string name="input_driver_name">请输入司机名称</string>
    <string name="input_bank_card">请输入银行卡号</string>
    <string name="add_success">添加成功</string>
    <string name="car_describe">车辆描述&#160;&#160;&#160;&#160;</string>
    <string name="car_driver">车辆司机&#160;&#160;&#160;&#160;</string>
    <string name="driver_phone">联系手机&#160;&#160;&#160;&#160;</string>
    <string name="un_write">未填写</string>
    <string name="grabbed">已抢到</string>
    <string name="confirm">确认</string>
    <string name="choice_oil_card">选择卡券</string>
    <string name="add_oil_card">添加卡券</string>
    <string name="need_choice_car">请先选择车辆</string>
    <string name="need_choice_card">请先选择卡券</string>
    <string name="my_cards">我的卡券</string>
    <string name="un_use">未使用</string>
    <string name="distribution_tender_confirm_message">油卡&#160;&#160;%1$s\n请确认分配信息是否正确</string>
    <string name="distribution_success">分配成功</string>
    <string name="save">保存</string>
    <string name="loading">加载中...</string>
    <string name="tender_number">运单编号&#160;&#160;&#160;&#160;%1$s</string>
    <string name="person_info">个人信息</string>
    <string name="photo_type">请上传您的%1$s</string>
    <string name="no_camera">您的手机没有摄像头！</string>
    <string name="real_name_auth">实名认证</string>
    <string name="bank_card_auth">银行卡认证</string>
    <string name="car_auth">车辆认证</string>
    <string name="input_name">请输入您的姓名</string>
    <string name="input_id_card">请输入您的身份证号码</string>
    <string name="select_car_type">请选择车辆类型</string>
    <string name="money">金额(元)</string>
    <string name="recharge_now">立即充值</string>
    <string name="withdraw_now">立即提现</string>
    <string name="deposit_recharge">保证金充值</string>
    <string name="deposit_withdraw">保证金提现</string>
    <string name="searching">搜索中...</string>
    <string name="no_result">未搜索到相应结果</string>
    <string name="no_connected">未检测到网络，请检查您的网络设置</string>
    <string name="mismatched">与要求车型不匹配，请重新选择</string>

    <!--支付相关-->
    <string name="action_settings">关于我们</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="et_input_money">请输入支付金额</string>
    <string name="et_input_order_des">订单描述如：精品玩具</string>
    <string name="submit_pay">提交支付</string>
    <string name="versions_check_ok">你的版本支持支付</string>
    <string name="versions_check_no">你的版本不支持支付</string>
    <string name="select_pay_type">你选择了</string>
    <string name="click_bt_submit">，点击按钮进行支付</string>
    <string name="greater_one">金额必须大于1分钱</string>

    <string name="no_token_id">订单号为空或位数不对，请检查输入的订单号！</string>
    <string name="new_token">或生成一个新的测试订单号</string>
    <string name="buy">去财付通支付</string>
    <string name="order_query">订单查询</string>
    <string name="order_id">请输入订单号查询</string>

    <string name="action_pay">付款</string>
    <string name="action_stream">流水</string>
    <string name="action_count">统计</string>
    <string name="action_share">分享</string>
    <string name="getting_all_access">正在获取全部订单...</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="order_success">支付成功</string>
    <string name="action_cancel">你取消了支付</string>
    <string name="action_sourch_null">查询不到订单</string>
    <string name="getorderNo">商户订单号</string>
</resources>
