<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_gray"
              android:orientation="vertical">

  <include layout="@layout/default_head"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_colors"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:alpha="0.5"
      android:text="@string/account_balance"
      android:textColor="@android:color/white"
      android:textSize="14sp"/>

    <TextView
      android:id="@+id/tvAccountBalance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:textColor="@android:color/white"
      android:textSize="50sp"/>
  </LinearLayout>

  <TextView
    android:id="@+id/tvBankCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:drawableLeft="@drawable/icon_left_arrows"
    android:drawablePadding="10dp"
    android:drawableRight="@drawable/icon_right_arrows"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:text="@string/bank_card"
    android:textColor="@color/text_black"
    android:textSize="16sp"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="@color/line_gray"/>

  <TextView
    android:id="@+id/tvTopUp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:drawableLeft="@drawable/icon_left_arrows"
    android:drawablePadding="10dp"
    android:drawableRight="@drawable/icon_right_arrows"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:text="@string/top_up"
    android:textColor="@color/text_black"
    android:textSize="16sp"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="@color/line_gray"/>

  <TextView
    android:id="@+id/tvWithdraw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:drawableLeft="@drawable/icon_left_arrows"
    android:drawablePadding="10dp"
    android:drawableRight="@drawable/icon_right_arrows"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:text="@string/withdraw"
    android:textColor="@color/text_black"
    android:textSize="16sp"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="@color/line_gray"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:layout_marginTop="15dp"
    android:background="@color/line_gray"/>

  <TextView
    android:id="@+id/tvCashDeposit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:drawableLeft="@drawable/icon_left_arrows"
    android:drawablePadding="10dp"
    android:drawableRight="@drawable/icon_right_arrows"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:text="@string/cash_deposit"
    android:textColor="@color/text_black"
    android:textSize="16sp"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="@color/line_gray"/>

  <TextView
    android:id="@+id/tvBill"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:drawableLeft="@drawable/icon_left_arrows"
    android:drawablePadding="10dp"
    android:drawableRight="@drawable/icon_right_arrows"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:text="@string/bill"
    android:textColor="@color/text_black"
    android:textSize="16sp"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="@color/line_gray"/>
</LinearLayout>