<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <include layout="@layout/z_kc_default_head"/>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
      android:id="@+id/ivSearch"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_centerInParent="true"
      android:background="@drawable/z_kc_ic_search"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@id/ivSearch"
      android:orientation="horizontal">

      <EditText
        android:id="@+id/etStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/provenance"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:textColorHint="@color/click_gray"
        android:textSize="16sp"/>

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/z_kc_ic_arrow"
        android:gravity="center"/>

      <EditText
        android:id="@+id/etEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/destination"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:textColorHint="@color/click_gray"
        android:textSize="16sp"/>
    </LinearLayout>
  </RelativeLayout>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="@color/line_gray"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <TextView
      android:id="@+id/tvSelectAll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/all"
      android:textColor="@color/click_gray"/>

    <TextView
      android:id="@+id/tvSelectBidding"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/bidding"
      android:textColor="@color/click_gray"/>

    <TextView
      android:id="@+id/tvSelectGrab"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/grab_order"
      android:textColor="@color/click_gray"/>
  </LinearLayout>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="@color/line_gray"/>

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:layout_marginTop="15dp"
    android:background="@color/line_gray"/>

  <com.zzqs.app_kc.widgets.xlistView.XListView
    android:id="@+id/lvOrders"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:divider="@android:color/white"
    android:dividerHeight="0px"
    android:listSelector="@android:color/white"
    android:scrollbars="none"/>
</LinearLayout>